# rpc-optimizer

./: README.md  package-lock.json  package.json
config/: rpcs.json
examples/: usage.js
rust/: Cargo.toml
rust/src/: batch.rs  benchmark.rs  config.rs  failover.rs  lib.rs  main.rs  nonce.rs  retry.rs
src/: batch.js  benchmark.js  config.js  failover.js  index.js  nonce.js  pool.js  retry.js  websocket.js
src/chains/: evm.js  solana.js
